# shareyourspace-backend

./: .dockerignore  .env  .gitignore  Dockerfile  alembic.ini  backend_content.txt  concatenate_backend_files.py  debug_startup.py  docker-compose.yml  main.py  pyproject.toml  pytest.ini  requirements.txt  start.sh  test_db_connection.py  verify_concatenation.py
alembic/: env.py
alembic/versions/: 01fcfe2512a6_make_corporate_admin_id_nullable_in_.py  0581da68b2ba_change_connection_status_to_enum.py  058d9245b090_add_space_node_and_workstation_models.py  08eced71251f_add_last_read_at_to_.py  0e5deaa84948_modernize_organization_model_and_fix_.py  1920f7bb20b0_add_total_workstations_to_spacenode.py  2504bd5cd76e_add_ondelete_cascade_to_user_company_id.py  25802b79acda_add_message_reaction_table.py  2a94457f8436_add_space_id_to_startup_and_relationship.py  2d953f697500_consolidated_initial_migration.py  33b3dd732ecc_add_is_profile_complete_to_user_profile.py  362919f61f47_add_space_node_and_workstation_models.py  38194ae977c2_add_address_to_spacenode.py  43b26710d32d_update_invitationstatus_enum_and_values.py  4560944864bf_add_updated_at_is_deleted_to_chatmessage.py  4b8122c55666_add_active_assignment_relationship_to_.py  6f81518f99df_create_user_table.py  (+29 more)
app/: dependencies.py  main.py  security.py  socket_handlers.py  socket_instance.py
scripts/: backfill_embeddings.py  check_vectors.py  delete_all_interests.py  delete_all_startups.py  delete_entity.py  delete_startup_by_id.py  delete_user_by_email.py  generate_embeddings_for_users.py  internal_auth_test.py  seed.py  test_db_connection.py  test_security_functions.py  update_passwords.py  verify_seed_data.py
(+107 files in other folders)
