[tool.poetry]
name = "shareyourspace-backend"
version = "0.1.0"
description = ""
authors = ["Marcel Kueck <marcel@shareyourspace.app>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.12"
uvicorn = {extras = ["standard"], version = "^0.34.2"}
pydantic-settings = "^2.8.1"
python-dotenv = "^1.1.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.40"}
alembic = "^1.15.2"
asyncpg = "^0.30.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = {extras = ["cryptography"], version = "^3.4.0"}
faker = "^37.1.0"
pydantic = {extras = ["email"], version = "^2.11.3"}
resend = "^2.7.0"
python-multipart = "^0.0.20"
google-cloud-storage = "^3.1.0"
pgvector = "^0.4.0"
google-generativeai = "^0.8.5"
python-socketio = "^5.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
